[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GUI/Battle/PlayerGUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GUI/Battle/GUI.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Regule5-Bold.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="GUI" type="Node2D"]
script = ExtResource( 2 )

[node name="PlayerGUI" parent="." instance=ExtResource( 1 )]

[node name="PlayerGUI2" parent="." instance=ExtResource( 1 )]
position = Vector2( 1023, 0 )
scale = Vector2( -1, 1 )

[node name="P1Hit" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 17.0
margin_top = 193.0
margin_right = 215.0
margin_bottom = 283.0
custom_colors/font_color = Color( 0.258824, 0.615686, 1, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.0588235, 0.341176, 1 )
custom_fonts/font = SubResource( 1 )
text = "999 HIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2Hit" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 806.0
margin_top = 182.0
margin_right = 1008.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0.258824, 0.615686, 1, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.0588235, 0.341176, 1 )
custom_fonts/font = SubResource( 1 )
text = "999 HIT"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
